🐛 Fix output tool tooltip alignment #2

--- a/src/options-effect.css
+++ b/src/options-effect.css
@@ -74,7 +74,7 @@ body {
     }
     .page-content,
     .container--fixed-height {
-      min-height: calc(100vh - 40px);
+      min-height: calc(100vh - 60px);
     }
   }
   &.hideHeader.hideFooter {
